--- a/Week-06/index.html
+++ b/Week-06/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrap">
         <header>
-            <input type="text" class="search-box" placeholder="Enter the city..." />
+            <input type="text" class="search-box" placeholder="Find our city..." />
         </header>
         <main>
             <section class="location">
